tests/paczka1/fuzzy1/43587678.err
Error in line 15: PbHufJEx6BG A999 74,3
Error in line 16: PbHufJEx6BG S745 70,8
Error in line 21: bLRAuPd6zR A999 59,1
Error in line 22: bLRAuPd6zR S76 85,4
Error in line 18: PbHufJEx6BG S76 99,7
